# heatsense

./: .env.example  .gitignore  LICENSE  README.md  WFS_FUNCTIONALITY.md  WFS_UPGRADE_PLAN.md  backend_test_result.json  noxfile.py  pyproject.toml  run_analysis.py  run_webapp.py  test_wfs_functionality.py
.pi/plans/: 2026-03-06_feat-polish-heatsense.md
data/cache/dwd/43200.0/: cache.db
data/cache/dwd/fsspec/ttl-FIVE_MINUTES/: cache
data/cache/dwd/fsspec/ttl-TWELVE_HOURS/: cache
data/processed/uhi_analysis/: analysis_summary.txt
data/processed/uhi_analysis_kreuzberg_2023-07-01_2023-07-31/: analysis_summary.txt  mitigation_recommendations_2023-07-01_to_2023-07-31.json
data/processed/uhi_analysis_summer/: analysis_summary.txt
data/processed/weather/: berlin_temperature_20240115.geojson  berlin_temperature_20240115_1200.geojson  berlin_temperature_interpolated_20240115.geojson  berlin_temperature_interpolated_20240115_1200.geojson
data/raw/boundaries/: berlin_admin_boundaries.geojson  large_test_area.geojson
data/raw/landcover/: berlin_corine_landcover.geojson  berlin_corine_landcover_2018.geojson
docs/: CorineDataDownloader.md  DWDDataDownloader.md  README.md  UrbanHeatIslandAnalyzer.md  WFSDataDownloader.md  analyzer_factory.md  cache_manager.md  corine_downloader.md  dwd_downloader.md  fast_urban_heat_island_analyzer.md  urban_heat_island_analyzer.md  wfs_downloader.md
examples/: basic_analysis.py
scripts/: analyze_heat_islands.py
scripts/analysis/: analyze_heat_islands.py  example_satellite_analysis.py
scripts/data_processing/: analyze_heat_islands.py  download_berlin_boundaries.py  download_berlin_weather_data.py  download_corine_landcover.py
src/heatsense/: __init__.py
src/heatsense/config/: __init__.py  settings.py
src/heatsense/data/: __init__.py  corine_downloader.py  dwd_downloader.py  urban_heat_island_analyzer.py  wfs_downloader.py
src/heatsense/utils/: __init__.py  data_processor.py
src/heatsense/webapp/: README.md  analysis_backend.py  app.py
src/heatsense/webapp/static/css/: style.css
src/heatsense/webapp/static/js/: app.js
src/heatsense/webapp/templates/: 404.html  index.html
src/uhi_analyzer/: __init__.py
src/uhi_analyzer/config/: __init__.py  credentials.py  settings.py
src/uhi_analyzer/data/: __init__.py  corine_downloader.py  dwd_downloader.py  fast_urban_heat_island_analyzer.py  urban_heat_island_analyzer.py  wfs_downloader.py
src/uhi_analyzer/scripts/: backend_example.py
src/uhi_analyzer/utils/: __init__.py  analyzer_factory.py  cache_manager.py  data_processor.py  setup_earth_engine.py
src/uhi_analyzer/visualization/: plot_berlin_corine_landcover.py
src/uhi_analyzer/webapp/: README.md  app.py  backend_logic.py  demo_webapp.py  run_webapp.py  start_webapp.py
src/uhi_analyzer/webapp/backend/: uhi_backend_api.py
src/uhi_analyzer/webapp/static/css/: style.css  styles.css
src/uhi_analyzer/webapp/static/js/: app.js  charts.js  map.js
src/uhi_analyzer/webapp/temp_analysis_data/: Buch_2025-06-01_2025-06-30_preview_boundary.geojson  Buch_2025-06-01_2025-06-30_preview_heat_islands.geojson  Buch_2025-06-01_2025-06-30_preview_result.json  Buch_2025-06-01_2025-06-30_preview_temperature.geojson  Mitte_2025-06-01_2025-06-30_fast_boundary.geojson  Mitte_2025-06-01_2025-06-30_fast_heat_islands.geojson  Mitte_2025-06-01_2025-06-30_fast_result.json  Mitte_2025-06-01_2025-06-30_fast_temperature.geojson
src/uhi_analyzer/webapp/templates/: 500.html  base.html  index.html
temp_analysis_data/: Mitte_2025-06-01_2025-06-30_preview_heat_islands.geojson  Mitte_2025-06-01_2025-06-30_preview_result.json  Mitte_2025-06-01_2025-06-30_preview_temperature.geojson
tests/: test_analyze_heat_islands_integration.py  test_analyzer_factory.py  test_cache_manager.py  test_corine_data_downloader.py  test_dwd_data_downloader.py  test_fast_urban_heat_island_analyzer.py  test_urban_heat_island_analyzer.py  test_wfs_downloader.py
tests/integration/: test_corine_years.py  test_dwd_downloader.py
tests/satellite/: test_satellite_analysis.py
