[project]
name = "urban-heat-island-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.0",
    "matplotlib>=3.10.3",
    "pyproj>=3.7.1",
    "requests>=2.32.4",
    "shapely>=2.1.1",
    "wetterdienst>=0.109.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "scipy>=1.11.0",
    "earthengine-api>=0.1.0",
    "rasterio>=1.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "numba>=0.58.0",
    "pysal>=2.8.0",
    "seaborn>=0.12.0",
    "libpysal>=4.13.0",
    "esda>=2.7.0",
    "ruff>=0.12.0",
    "pytest>=7.0.0",
]
